--- a/gerenciador/WebContent/index.html
+++ b/gerenciador/WebContent/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-Bem vindo ao nosso gerenciador de empresas!<br/>
+Bem vindo ao nosso gerenciador de empresas!!<br/>
 </body>
 </html>
