Add Session, login.

--- a/gerenciador/WebContent/index.html
+++ b/gerenciador/WebContent/index.html
@@ -1,9 +1,17 @@
 <html>
 <body>
-Bem vindo ao nosso gerenciador de empresas!!<br/>
-<form action="novaEmpresa" method="POST">
-  	Nome: <input type="text" name="nome">
-  	<input type="submit" value="Enviar">			
-</form>
+	Bem vindo ao nosso gerenciador de empresas!!
+	<br />
+	<form action="novaEmpresa" method="POST">
+		Nome: <input type="text" name="nome"> 
+		<input type="submit" value="Enviar">
+	</form>
+
+	<form action="login" method="POST">
+		Email: <input type="email" name="email" /> Senha: <input
+			type="password" name="senha" /> 
+			<input type="submit" value="Logar" />
+	</form>
 </body>
 </html>
+
