--- a/gerenciador/WebContent/index.html
+++ b/gerenciador/WebContent/index.html
@@ -12,6 +12,10 @@
 			type="password" name="senha" /> 
 			<input type="submit" value="Logar" />
 	</form>
+	
+	<form action="logou" method="POST">
+	  <input type="submit" value"Logout">
+	</form>
 </body>
 </html>
 
